--- a/userfrosting/templates/themes/default/users/users.twig
+++ b/userfrosting/templates/themes/default/users/users.twig
@@ -191,7 +191,8 @@
                     var $table = $(this);
                     
                     if (data) {
-                        console.log(data);
+                       
+                        //console.log(data);
                         var col, row, txt,
                             // make # column show correct value
                             index = $('#table-users')[0].config.pager.page,
@@ -206,7 +207,7 @@
                         for (row = 0; row < size; row++){
                             rows += '<tr>';
                             var cell_data = {
-                                "user" : data['rows'][ row ],
+                                "user" : data['rows'][ row ],       // It is safe to use the data from the API because Handlebars escapes HTML
                                 "site" : site
                             };
                             rows += template_0(cell_data);
