Feature #391 - loading effects for buttons

--- a/userfrosting/templates/themes/default/account/login.twig
+++ b/userfrosting/templates/themes/default/account/login.twig
@@ -40,7 +40,7 @@
         </div>
       </div>
       <div class="col-md-12">
-        <button type="submit" class="btn btn-success"  data-loading-text="Please wait..." >
+        <button type="submit" class="btn btn-success">
             Login
         </button>
       </div>
