--- a/userfrosting/templates/themes/default/account/register.twig
+++ b/userfrosting/templates/themes/default/account/register.twig
@@ -112,7 +112,7 @@
     <div class="row">
         <div class="col-sm-12">
             <div>  
-                <button type="submit" name="btn_register" class="btn btn-success"  data-loading-text="Please wait..." >Register</button>
+                <button type="submit" name="btn_register" class="btn btn-success">Register</button>
             </div>
         </div>
     </div>
