--- a/userfrosting/templates/themes/default/components/common/group-info-form.twig
+++ b/userfrosting/templates/themes/default/components/common/group-info-form.twig
@@ -85,7 +85,7 @@
         {% if "submit" not in buttons.hidden %}
         <div class="col-xs-8 col-sm-4">
             <div class="vert-pad">
-                <button type="submit" class="btn btn-block btn-lg btn-success" data-loading-text="Please wait...">
+                <button type="submit" class="btn btn-block btn-lg btn-success">
                     {{submit_button}}
                 </button>
             </div>          
