--- a/userfrosting/templates/themes/default/install/install-master.twig
+++ b/userfrosting/templates/themes/default/install/install-master.twig
@@ -99,7 +99,7 @@
                 </div>
             </div>
             <div class="form-group text-center">
-                <button type="submit" class="btn btn-lg btn-success" data-loading-text="Please wait...">Register</button>
+                <button type="submit" class="btn btn-lg btn-success">Register</button>
             </div>
             <div class="collapse">
               <label>Spiderbro: Don't change me bro, I'm tryin'a catch some flies!</label>
