--- a/userfrosting/templates/themes/default/groups/groups.twig
+++ b/userfrosting/templates/themes/default/groups/groups.twig
@@ -67,8 +67,8 @@
                                                 <i class="fa fa-edit"></i> Edit group
                                                 </a>
                                             </li>
-                                            <li class="disabled">
-                                                <a href="#" data-id="{{group.id}}">
+                                            <li>
+                                                <a href="{{site.uri.public}}/groups/g/{{group.id}}/auth">
                                                 <i class="fa fa-key"></i> Authorization rules
                                                 </a>
                                             </li>
