fix paths to email templates

--- a/userfrosting/templates/themes/default/dashboard.twig
+++ b/userfrosting/templates/themes/default/dashboard.twig
@@ -27,12 +27,15 @@
           Welcome to {{site.site_title}}!  The dashboard and admin account features are based on the SB Admin 2 template by <a class="alert-link" href="http://startbootstrap.com">Start Bootstrap</a>. Other key frameworks and plugins used in this system are:
           <br><a class="alert-link" href='http://www.slimframework.com/'>Slim</a>: a microframework for PHP
           <br><a class="alert-link" href='http://twig.sensiolabs.org/'>Twig</a>: The flexible, fast, and secure
-template engine for PHP                      
+template engine for PHP
+          <br><a class="alert-link" href='http://http://laravel.com/docs/5.1/eloquent/'>Eloquent</a>: Laravel's ORM
           <br><a class="alert-link" href='http://http://jquery.com/'>jQuery 1.11.2</a>
           <br><a class="alert-link" href='http://getbootstrap.com/'>Twitter Bootstrap 3.3.2</a>
+          <br><a class="alert-link" href='http://handlebarsjs.com/'>Handlebars</a>: Minimal templating on steroids
           <br><a class="alert-link" href='http://fontawesome.io/'>Font Awesome</a>
-          <br><a class="alert-link" href='http://formvalidation.io/'>FormValidation</a>: client-side input validation
-          <br><a class="alert-link" href='http://tablesorter.com/docs/'>Tablesorter 2.17.7</a>: sortable, searchable tables
+          <br><a class="alert-link" href='http://jqueryvalidation.org'>jQuery Validation</a>: Form validation with jQuery
+          <br><a class="alert-link" href='http://tablesorter.com/docs/'>Tablesorter 2.23.4</a>: sortable, searchable tables
+          <br><a class="alert-link" href='http://momentjs.com/'>Moment.js</a>: Parse, validate, manipulate, and display dates in JavaScript
           <br>The <a class="alert-link" href='http://www.bootstrap-switch.org/'>Bootstrap Switch</a> component by Mattia Larentis,Peter Stein, and Emanuele Marchi
           <br><a class="alert-link" href="https://select2.github.io/">Select2</a>: the jQuery replacement for search boxes
           <br>All components are copyright of their respective creators.
