--- a/userfrosting/templates/themes/default/mail/password-reset.twig
+++ b/userfrosting/templates/themes/default/mail/password-reset.twig
@@ -1,3 +1,8 @@
+{% block subject %}
+    {{site.site_title}} - your password reset request
+{% endblock %}
+
+{% block body %}
 <p>Dear {{user.display_name}},
 </p>
 <p>
@@ -14,3 +19,4 @@ If you did <b>not</b> initiate this request, please click this link to deny: <a 
 With regards,<br>
 The {{site.site_title}} Team
 </p>
+{% endblock %}
